[package]
name = "hrm-rs"
version = "0.1.0"
authors = ["Tobias Breitwieser <tobias@breitwieser.biz>"]
edition = "2018"
exclude = [".gitignore", ".github"]
documentation = "https://docs.rs/hrm-rs"
keywords = ["no-std", "max30102", "embedded", "embedded-hal-driver"]
categories = ["embedded", "no-std"]
readme = "README.md"
description = "HRM calculation for MAX30102"
license = "Apache-2.0"
repository = "https://github.com/tarfu/hrm-rs"

[package.metadata.docs.rs]
all-features = true
default-target = "x86_64-unknown-linux-gnu"

[dependencies]
embedded-hal = "^0.2"
bit_field = "0.10.0"
#libm = "0.2.1"


[dev-dependencies]
embedded-hal-mock = "^0.7"



